# LLMRouterBench

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.zh.md  pyproject.toml
data/: manifest.json
main/: __init__.py  chat_messages.py  cli.py  dataset.py  metrics.py  pricing.py  router_llm.py  tiers.py  tokenizer.py
main/eval/: __init__.py  predictors.py  runner.py  sampling.py  section11.py
