[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CommonRouterBench"
version = "0.1.0"
description = "CommonRouterBench: tier-only routing supervision data and Section 11 nominal cost metrics"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "CommonRouterBench contributors" }]
keywords = ["llm", "router", "benchmark"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["requests>=2.28.0", "tiktoken>=0.7.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
CommonRouterBench = "main.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["main*"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

# Ship manifest + single question bank when present at build time.
[tool.setuptools.package-data]
main = ["data/manifest.json", "data/question_bank.jsonl"]
